using opacity animation + fix spacing on 'blank' layout

--- a/jVal.css
+++ b/jVal.css
@@ -23,12 +23,13 @@
 }
 .jfVal .icon {
 	float: left;
-	width: 20px;
 }
 .jfVal .iconcover {
 	background: #eee url(eeGrad2.gif) bottom repeat-x;
 	border: 1px solid #ccc;
 	border-width: 1px 0px;
+	width: 20px;
+	text-align: left;
 }
 .jfVal .iconpod {
 	background: #f0f2f5 url(f0f2f5grad.gif) bottom repeat-x;
@@ -38,16 +39,19 @@
 	-moz-border-radius-bottomright: 3px;
 	-webkit-border-top-right-radius: 3px;
 	-webkit-border-bottom-right-radius: 3px;
+	width: 20px;
+	text-align: left;
 }
 .jfVal .iconblank {
+	background: #fff;
 	margin-top: -4px;
 	height: 20px !important;
-	opacity: 0.8;
+	padding-left: 5px;
 }
 .jfVal .icon .iconbg {
 	background: url(warning.gif) center left no-repeat;
 	height: 100%;
-	width: 20px;
+	width: 16px;
 }
 .jfVal .content {
 	color: red;
